--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="error_loading_page">Error loading page</string>
     <string name="retry">Retry</string>
 
+    <string name="home">Home</string>
+    <string name="favorite">Favorites</string>
+    <string name="settings">Settings</string>
+
 </resources>
