--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,17 @@
 <resources>
     <string name="app_name">Pokemon Challenge</string>
 
-    <string name="title_main">Pokemon cards</string>
+    <string name="title_main">Pokemon Cards</string>
 
     <string name="error_loading_data">Error loading data</string>
     <string name="error_loading_page">Error loading page</string>
     <string name="retry">Retry</string>
+    <string name="close">Close</string>
+
+    <string name="grid_style">Grid style</string>
+    <string name="grid_style_small">Small</string>
+    <string name="grid_style_medium">Medium</string>
+    <string name="grid_style_large">Large</string>
 
     <string name="home">Home</string>
     <string name="favorite">Favorites</string>
